@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1324 2007/06/10 11:23:47 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1325 2007/06/10 11:26:02 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2535,3 +2535,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated textproc/p5-Pod-Simple to 3.05 [obache 2007-06-10]
 	Added time/p5-Time-Clock version 0.11 [abs 2007-06-10]
 	Added time/p5-DateTime-Format-Pg version 0.16001 [abs 2007-06-10]
+	Added time/p5-DateTime-Format-MySQL version 0.04 [abs 2007-06-10]
